@@ -1,3 +1,9 @@
+2006-06-14  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/27227
+	* g++.dg/lookup/linkage1.C: New test.
+	* g++.dg/lookup/linkage2.C: Likewise.
+
 2006-06-14  Andreas Krebbel  <krebbel1@de.ibm.com>
 
 	PR middle-end/27959
